--- a/src/main/resources/templates/recherche.html
+++ b/src/main/resources/templates/recherche.html
@@ -3,35 +3,41 @@
 
 <head>
     <meta charset="UTF-8">
-    <title th:text="#titre">Recherche d'ouvrages</title>
+    <title>Recherche d'ouvrages</title>
 </head>
 <body>
 <div th:insert="header.html"/>
 
 <div class="container" style="margin-top:5%">
 
-    <input method="POST" modelAttribute="recherche" action="/recherche">
+    <h1>Liste des livres</h1>
 
-    <h2>Recherche d'ouvrages</h2><br/>
+    <form th:action="@{/recherche}" method="get">
+        <label>Mot clé :</label>
+        <input type="text" name="motCle" th:value="${motCle}"/>
+        <button class="btn btn-primary">Chercher</button>
+    </form>
 
-    <div class="input-group mb-3">
-        <div class="input-group-prepend">
-            <span class="input-group-text" id="titre">Titre du livre</span>
-        </div>
-        <input path="titre" type="text" class="form-control" autofocus="true" aria-label="Default"
-               aria-describedby="inputGroup-sizing-default"/>
+    <div class="cstyle">
+        <table class="table listTableDeco">
+            <thead>
+            <tr>
+                <th>Titre :</th>
+                <th>Nom de l'Auteur</th>
+            </tr>
+            </thead>
+                    <tbody>
+                    <tr th:each="livre:${livreBeanList}">
+                        <td><a th:href="@{/livre/{id}(id=${livre.id})}" th:text="${livre.titre}"></a></td>
+                        <td th:text="${livre.auteur}"></td>
+                    </tr>
+                    </tbody>
+        </table>
     </div>
-
-    <div class="input-group mb-3">
-        <div class="input-group-prepend">
-            <span class="input-group-text" id="auteur">Auteur</span>
-        </div>
-        <input path="auteur" type="text" class="form-control" aria-label="Default"
-               aria-describedby="inputGroup-sizing-default"/>
+    <div th:if="${livreBeanList.isEmpty()}">
+        <p>Aucun livres ne correspond à vos critères</p>
     </div>
-
-    <button class="btn btn-primary btn-lg btn-block" type="submit">Search</button>
-</div>>
+</div>
 
 <!--<table class="table  table-bordered">-->
 <!--    <tr>-->
