--- a/src/main/resources/templates/detailsLivre.html
+++ b/src/main/resources/templates/detailsLivre.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="fr" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
-
-    <link rel="stylesheet" type="text/css"
-          href="http://localhost:8080/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css"/>
-
     <meta charset="UTF-8">
     <title>Details Livre</title>
-
-
 </head>
 <body>
+<div th:insert="header.html"/>
 
-<div class="container">
+<div class="container" style="margin-top:5%">
 
-    <h1 class="text-center">Informations sur le livre</h1>
+    <h1>Details du livre <p th:text="${livre.titre}"/></h1>
 
     <div class="row">
         <div class="col-md-4 mx-auto mt-5 text-center">
