Avancement de spring security

--- a/src/main/resources/templates/livres.html
+++ b/src/main/resources/templates/livres.html
@@ -5,6 +5,8 @@
     <title>Livres</title>
 </head>
 <body>
+<div th:insert="header.html"/>
+
 <h1 class="text-center">Application de ma bibliotheque</h1>
 
 <div class="row">
