--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,16 +11,14 @@
 <h1>S'identifier</h1>
 
     <form th:action="@{/login}" method="post">
-        <label>Utilisateur :</label>
-        <input type="text" name="pseudo" path="username" id="username" th:value="${username}"/>
+        <label>Numéro de carte de bibliotheque :</label>
+        <input type="text" name="username" path="username" id="username" th:value="${username}"/>
         <label>Mot de passe :</label>
         <input type="password" name="password" path="password" id="password" th:value="${password}"/>
-    </form>
-    <button class="btn btn-primary">Let's Go </button>
 
-
-    <input type="submit" class="btn btn-success" value="Valider"/>
+    <button type="submit" value="valider" class="btn btn-success">Valider</button>
     <a class="btn btn-danger" href="/">Cancel</a>
+    </form>
 
 </div>
 </div>
