--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,15 +1,17 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="fr" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Les amis de l'escalade !!</title>
+    <title>Bibliotheque</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!--    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
+
 
 </head>
 <body>
@@ -33,8 +35,7 @@
                 </li>
             </ul>
 
-<!--            <sec:authorize var="loggedIn" access="isAuthenticated()" >-->
-
+                <div sec:authorize var="loggedIn" access="isAuthenticated()">
                 <div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -45,10 +46,12 @@
                         </li>
                     </ul>
                 </div>
-<!--            </sec:authorize>-->
+
+                </div></sec:authorize>
+            <div sec:authorize="isAuthenticated()">     This text is displayed for authenticated users. </div>
 
 
-<!--            <sec:authorize access="isAnonymous()">-->
+            <div sec:authorize access="isAnonymous()">
                 <div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -59,9 +62,7 @@
                         </li>
                     </ul>
                 </div>
-<!--            </sec:authorize>-->
-        </div>
-    </div>
-
+            </div>
+        </div></sec:authorize>
     </div>
 </nav>
