test pour debug

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
 
-<html lang="fr" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html xmlns:sec="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bibliotheque</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<!--    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>-->
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 
 </head>
@@ -35,23 +35,24 @@
                 </li>
             </ul>
 
-                <div sec:authorize var="loggedIn" access="isAuthenticated()">
-                <div>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-primary" href="/liste-de-mes-emprunts">Liste de mes emprunts</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-primary" href="/logout">Se deconnecter</a>
-                        </li>
-                    </ul>
+
+                <div sec:authorize="isAuthenticated()">
+                    <div>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link text-primary" href="/liste-de-mes-emprunts">Liste de mes emprunts</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-primary" href="/logout">Se deconnecter</a>
+                            </li>
+                        </ul>
+                    </div>
+
                 </div>
 
-                </div></sec:authorize>
-            <div sec:authorize="isAuthenticated()">     This text is displayed for authenticated users. </div>
+<!--            <p th:action="isAuthenticated()">     This text is displayed for authenticated users.</p>-->
 
-
-            <div sec:authorize access="isAnonymous()">
+            <div sec:authorize="isAnonymous()">
                 <div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -63,6 +64,9 @@
                     </ul>
                 </div>
             </div>
-        </div></sec:authorize>
+        </div>
     </div>
 </nav>
+
+
+
