modification et debug

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html xmlns:sec="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <meta charset="UTF-8" />
