--- a/src/main/resources/templates/livre.html
+++ b/src/main/resources/templates/livre.html
@@ -18,10 +18,10 @@
                 </thead>
 
                 <tbody>
-                    <tr th:href="@{/details-livre/{id}(id=${livre.id})}" th:each="livre : ${livre}">
+                    <tr th:href="@{/details-livre/{id}(id=${livre.id})}" th:each="livre, livrStat : ${livre}">
                         <td th:text="${livre.titre}"></td>
                         <td th:text="${livre.auteur}"></td>
-<!--                        <td th:text="${nbExemplaires}"></td>-->
+                        <td th:text="${nbExemplaires}"></td>
                     </tr>
                 </tbody>
             </table>
