prolongation implem ok

--- a/src/main/resources/templates/liste-de-mes-emprunts.html
+++ b/src/main/resources/templates/liste-de-mes-emprunts.html
@@ -31,7 +31,7 @@
             <td th:text="${exemplaire.dateRetour}"></td>
             <td th:text="${exemplaire.prolongerEmprunt}"></td>
 
-            <td><a href="/prolongerEmprunt/${exemplaire.id}" class="btn btn-success">Prolonger l'emprunt</a></td>
+            <td><a th:href="@{/prolonger-emprunt/{id}(id=${exemplaire.id})}" class="btn btn-success">Prolonger l'emprunt</a></td>
         </p>
         </tr>
         </tbody>
